# dummy

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py
infrastructure/: setup.sql  spec.yaml
